--- a/src/main/resources/frontend/src/components/loginorregister.css
+++ b/src/main/resources/frontend/src/components/loginorregister.css
@@ -17,28 +17,30 @@
 }
 
 .form {
-  margin: 5% 0 0 0;
+  margin: 5% 3% 0 3%;
   display: flex;
   flex-direction: column;
 }
 
 .form-input {
+  width: 70%;
   padding: 12px;
-  margin: 3% 0;
+  margin: 3.5% 0% 3% -2.5%;
   border: 1px solid #ccccccbf;
   border-color: #52775298;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   font-size: 16px;
   background-color: transparent;
 }
 
 .form-button {
+  width: 106%;
   padding: 12px;
   background-color: #007bff;
   color: white;
   border: none;
-  margin: 3% 0;
+  margin: 3% -2.5%;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
