--- a/src/main/resources/frontend/src/components/navbar.css
+++ b/src/main/resources/frontend/src/components/navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  background: #6a8e2388;
+  background: #88c2137b;
   position: absolute;
   z-index: 2;
   width: 96.5%;
@@ -19,8 +19,11 @@
 }
 
 .navbar a:hover {
-  background-color: #555;
+  background-color: #76a90f;
+  color: #ffffff;
   border-radius: 4px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background 0.7s ease, box-shadow 0.7s ease;
 }
 
 .navbar .navbar-links {
