--- a/src/main/resources/frontend/src/pages/HomePage.css
+++ b/src/main/resources/frontend/src/pages/HomePage.css
@@ -8,18 +8,33 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .section1 {
   position: relative;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 
 .img1 {
   width: 100%;
   height: 100vh;
   object-fit: cover;
+}
+.info {
+  width: 40%;
+  background-color: aqua;
+  margin: -30% 0 0 60%;
+  text-align: left;
+}
+.title{
+  font-size: 50px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: white;
+}
+.info h2{
+  color: rgb(245, 238, 225);
+  padding: 2% 0%;
+  font-size: 25px;
 }
